--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
  - 14
 script:
   - npm test
-  - npm run build
+  - npm run build-storybook
 deploy:
   provider: surge
   skip_cleanup: true
