--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,11 @@ script:
   - npm test
   - npm run build-storybook
 deploy:
-  provider: surge
-  skip_cleanup: true
-  domain: idb-suggester.surge.sh
-  project: ./lib/
-on:
-  branch: master
+  provider: pages
+  skip-cleanup: true
+  local_dir: storybook-static
+  github-token: $GITHUB_TOKEN
+  keep-history: true
+  target_branch: gh-pages
+  on:
+    branch: master
