--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
 deploy:
   provider: pages
   skip-cleanup: true
-  local_dir: storybook-static
+  local_dir: static
   github-token: $GITHUB_TOKEN
   keep-history: true
   target_branch: gh-pages
