--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "mode": "production",
   "name": "idb-suggester",
-  "version": "0.2.8",
+  "version": "0.2.9",
   "license": "MIT",
   "author": "renaud.genevois",
   "repository": {
     "type": "git",
     "url": "https://github.com/renaud23/idb-suggester.git"
   },
-  "main": "./lib/index.js",
+  "main": "release/index.js",
   "description": "a simple suggester, using indexedDB.",
   "scripts": {
     "build": "webpack",
