--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "mode": "production",
   "name": "idb-suggester",
-  "version": "0.2.10",
+  "version": "0.2.11",
   "license": "MIT",
   "author": "renaud.genevois",
   "repository": {
@@ -9,6 +9,9 @@
     "url": "https://github.com/renaud23/idb-suggester.git"
   },
   "main": "release/index.js",
+  "files": [
+    "release"
+  ],
   "description": "a simple suggester, using indexedDB.",
   "scripts": {
     "build": "webpack",
