--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,20 @@
 language: node_js
 node_js:
   - 'stable'
-script:
-  - npm test
-  - yarn build
-deploy:
-  provider: npm
-  email: '$NPM_EMAIL'
-  api_key: '$NPM_TOKEN'
-  before_deploy:
-    - rm -rf release
-  on:
-    branch: release
+cache: yarn
+install:
+  - yarn install
+jobs:
+  include:
+    - stage: build and deploy
+      script:
+        - yarn test
+        - yarn build
+      deploy:
+        provider: npm
+        email: '$NPM_EMAIL'
+        api_key: '$NPM_TOKEN'
+        before_deploy:
+          - rm -rf release
+        on:
+          branch: release
