--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ jobs:
         - yarn build
       deploy:
         provider: npm
+        skip_cleanup: true
         email: '$NPM_EMAIL'
         api_key: '$NPM_TOKEN'
         on:
